# welds_defects_detection

./: .dockerignore  .gitattributes  Dockerfile  Makefile  README.md  bin.py  front.py  pyproject.toml  requirements.txt
models/: construction_defects_aug.yaml
models/20240615_5_classes_640_8l_150_90_10_iter_train_aug/: args.yaml  events.out.tfevents.1718449304.s001cd-hdp-c01.20214.0  results.csv
models/20240615_5_classes_640_8l_150_90_10_iter_train_aug/weights/: best.pt  last.pt
models/20240615_5_classes_640_8l_150_90_10_iter_train_aug/weights/best_openvino_model/: best.xml  metadata.yaml
models/20240615_5_classes_640_8m_100_aug/: args.yaml  events.out.tfevents.1718465488.s001cd-hdp-c01.42392.0  results.csv
models/20240615_5_classes_640_8m_100_aug/weights/: best.pt  last.pt
models/20240615_5_classes_640_8m_100_aug/weights/best_openvino_model/: best.xml  metadata.yaml
models/20240615_5_classes_640_8n_150_90_10_iter_train_aug/: args.yaml  events.out.tfevents.1718443183.s001cd-hdp-c01.6477.0  results.csv
models/20240615_5_classes_640_8n_150_90_10_iter_train_aug/weights/best_openvino_model/: best.xml  metadata.yaml
models/20240615_5_classes_640_8s_150_90_10_iter_train_aug/: args.yaml  events.out.tfevents.1718422471.s001cd-hdp-c01.65604.0  results.csv
utils/: construction_defects_datasets.ipynb  stratify_object_detection_dataset.ipynb  transfer_data_to_cvat.ipynb  yolo_sahi_for_submission.ipynb
welds_defects_detection/: SahiOpenVino.py  config.py  detection.py  main.py
(+2 files in other folders)
